feat: Add flexible beets import system with optional auto-tagging
- Add new /import command with optional auto-tagging parameter
- Update beets config to support both -A (no autotag) and full autotag modes
- Implement Config class for better environment variable management
- Add input validation and URL sanitization
- Replace synchronous requests with aiohttp for better performance
- Fix duplicate functions and improve error handling
- Update docker-compose with new environment variables
- Update README with new import functionality documentation

--- a/beets-config.yaml
+++ b/beets-config.yaml
@@ -11,12 +11,14 @@ import:
   write: yes           # Write tags if we run anything manually (safe here)
   copy: no
   delete: no
-  autotag: no          # ❗ Explicitly disable metadata changes
-  timid: yes           # Prevent any accidental overwrites
+  autotag: yes         # Enable auto-tagging by default (can be overridden with -A)
+  timid: no            # Allow auto-tagging when enabled
   resume: ask
   quiet_fallback: skip
   incremental: no
   log: /app/.beets/import.log
+  detail: yes          # Show more import details
+  group_albums: yes    # Group tracks into albums automatically
 
 paths:
     default: $albumartist/$album%aunique{}/$track $title
