--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.12.13
 beautifulsoup4==4.13.4
 colorthief==0.2.1
 demjson3==3.0.6
-discord.py==2.5.2
+discord.py[voice]==2.5.2
 fuzzywuzzy==0.18.0
 gamdl
 mutagen==1.47.0
@@ -11,3 +11,5 @@ playwright==1.52.0
 python-dotenv==1.1.1
 python-levenshtein
 requests==2.32.4
+PyNaCl>=1.3.0
+ffmpeg-python==0.2.0
