--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
       - COOKIES_PATH=${COOKIES_PATH:-/app/cookies.txt}
       - DOWNLOAD_TIMEOUT=${DOWNLOAD_TIMEOUT:-300}
       - RETRY_ATTEMPTS=${RETRY_ATTEMPTS:-3}
+      - LASTFM_API_KEY=${LASTFM_API_KEY}
+      - LASTFM_API_SECRET=${LASTFM_API_SECRET}
     volumes:
       - /mnt/user/data/media/music:/music
       - /mnt/user/data/media/music/downloads:/downloads
