--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ requests==2.32.4
 PyNaCl>=1.3.0
 ffmpeg-python==0.2.0
 pylast==5.2.0
+
+# Additional utilities for better code organization
+typing-extensions>=4.0.0
